tests/lean/1719.lean
example (h : P) : P î€ Q := by
  apply .inl
